new Integer -> Integer.valueOf