@@ -383,8 +383,8 @@ public class RunnersPanel extends TabPanel
 			public int compare(String o1, String o2) {
 				Integer n1 = null;
 				try {
-					n1 = new Integer(o1);
-					Integer n2 = new Integer(o2);
+					n1 = Integer.valueOf(o1);
+					Integer n2 = Integer.valueOf(o2);
 					return n1.compareTo(n2);
 				} catch (NumberFormatException e) {
 					if( n1==null ){ // n1 is XXXXaa ecard
